Completing upgrade to Spring Boot 3 / Jakarta EE namespace